--- a/public/index.html
+++ b/public/index.html
@@ -66,5 +66,6 @@
     ></script>
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+    <script src="https://js.stripe.com/v3/"></script>
   </body>
 </html>
